--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Hearth and Home
 description: Games, Casual chat, Contests
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: images/Yatagarasu_A.jpg
 
 #
 # Flags below are optional
