--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Hearth and Home
+name: English Speak Up
 
 # Short bio or description (displayed in the header)
-description: Games, Casual chat, Contests
+description: Games, Casual chat, Speaking practice
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: images/Yatagarasu_A.jpg
