--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ avatar: images/Yatagarasu_A.jpg
 footer-links:
   dribbble:
   email:
-  facebook:
+  facebook: https://www.facebook.com/growlroar
   flickr:
   github: https://github.com/Nostrathomas0
   instagram:
