--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ footer-links:
   facebook: https://www.facebook.com/growlroar
   flickr:
   github: https://github.com/Nostrathomas0
-  instagram:
+  instagram: form_like_water
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
