--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: English Speak Up
+name: Hooked on phone-ics
 
 # Short bio or description (displayed in the header)
-description: Games, Casual chat, Speaking practice
+description: Language learning, App reviews, Pragmatics
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: images/Yatagarasu_A.jpg
@@ -39,9 +39,9 @@ disqus:
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
 
-# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
-# Used for Sitemap.xml and your RSS feed
-url:
+Your website URL (www.languapps.com)
+Used for Sitemap.xml and your RSS feed
+url: www.languapps.com
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
