--- a/_config.yml
+++ b/_config.yml
@@ -39,8 +39,8 @@ disqus:
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
 
-Your website URL (www.languapps.com)
-Used for Sitemap.xml and your RSS feed
+Your website URL: www.languapps.com
+
 url: www.languapps.com
 
 # If you're hosting your site at a Project repository on GitHub pages
