--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ disqus:
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
 
-Your website URL: www.languapps.com
+Your website URL: www.languapps.com/reviews
 
 url: www.languapps.com
 
